# srcmake

./: .gitignore  .pre-commit  LICENSE  README.md  nfa.py  nfa_old.py  parse_test.py  pre-commit  pyproject.toml  rre.py  rregex.py  singletonrefs.py  test.langdef  ut.py  ut_nfa.py  ut_raw_nfa.py  ut_rre.py  ut_rre_nfa.py  ut_rre_src.py
lua-safe/: test1.lua  test2.lua
lua-safe/doc/: contents.html  manual.html  readme.html
lua-safe/src/: .gitignore  Makefile  lbaselib.c  lbaselib.h  lcorolib.h  ldblib.h  linit.h  lmathlib.h  lstrlib.h  ltablib.h  lualib.h  lutf8lib.h
pybuild/: asyncfn.py  asyncfn_ut.py  build.py  builder.py  buildfile.py  compilers.py  test.py  yfasync.py
pybuild/UT_Int.build/.obj/home/dlsloan/repos/srcmake/testlib/: UT.o++  UT_Int.o++
riscv-core/: test.cpp  test2.hpp  test3.cpp  test3.hpp
src/srcmake/: BuildEnv.py  Target.py  __init__.py  buildenv.py  builder.py  executable.py  gccbuilder.py  sourcefile.py  sourcefile_cpp.py  sourcefile_h.py  sourcefilefactory.py  target.py
tests/: ut_basic.py  ut_packages.py
tests/projects/hello_world/: main.cpp  readme.txt
tests/projects/multi_file_hello_world/: hello_world.cpp  main.cpp
